@@ -1,29 +1,0 @@
-/*
- *  This file is part of MUSIC.
- *  Copyright (C) 2007 CSC, KTH
- *
- *  MUSIC is free software; you can redistribute it and/or modify
- *  it under the terms of the GNU General Public License as published by
- *  the Free Software Foundation; either version 3 of the License, or
- *  (at your option) any later version.
- *
- *  MUSIC is distributed in the hope that it will be useful,
- *  but WITHOUT ANY WARRANTY; without even the implied warranty of
- *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- *  GNU General Public License for more details.
- *
- *  You should have received a copy of the GNU General Public License
- *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
- */
-
-#ifndef MUSIC_PARSE_HH
-
-#include <string>
-#include <fstream>
-#include <music/application_map.hh>
-
-MUSIC::application_map* parse_config (std::ifstream* config_file);
-char ** parse_args (std::string args);
-
-#define MUSIC_PARSE_HH
-#endif
